--- a/plutus-book/doc/off-chain/payToWallet1.adoc
+++ b/plutus-book/doc/off-chain/payToWallet1.adoc
@@ -30,10 +30,10 @@ myPayToWallet wallet ada = do
 $(mkFunctions ['myPayToWallet])
 ----
 
-<1> Function `myPayToWallet` takes two arguments,
-the wallet to send funds to and the amount to send.
+<1>The `myPayToWallet` function takes two arguments,
+the wallet for sending funds, and the amount to send.
 
-<2> We can look up the public key belonging to a wallet with
+<2> We can look up the public key of a wallet with
 `walletPubKey`.
 
 <3> We use `defaultSlotRange` here to indicate that the transaction will
